<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_dashboard_list"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_po"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/po"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>

            <TextView
                android:id="@+id/po_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/txt_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/branch"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/branch_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="bb"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/part_no"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>

            <TextView
                android:id="@+id/part_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="aa"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/txt_order_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_date"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/order_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="13"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>