<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SingleProfile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_dashboard_list"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/linearlayout"
        android:layout_height="wrap_content"
        android:weightSum="1">

    <LinearLayout
        android:layout_margin="3dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:weightSum="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_po"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/po_no"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.53"
                android:textColor="@color/primary_text"/>

            <TextView
                android:id="@+id/po_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="001"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.47"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/txt_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parts_no"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.55"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/part_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="001"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.45"
                android:textColor="@color/primary_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:weightSum="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_poqty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/po_qty"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.53"
                android:textColor="@color/primary_text"/>

            <TextView
                android:id="@+id/po_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.47"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/txt_eporder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Order_no"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.55"
                android:singleLine="true"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/eporderno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="88"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.45"
                android:textColor="@color/primary_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:weightSum="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_receiptqty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receive_qty"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.47"
                android:singleLine="true"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/receive_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="88"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.53"
                android:textColor="@color/primary_text"/>

            <TextView
                android:id="@+id/txt_receivedqty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/received_qty"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:singleLine="true"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/received_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/status_icon"
        android:src="@drawable/icircle"
        android:layout_weight="0.1"
        android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
