<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_layout"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Bottom View Start-->
    <LinearLayout
        android:id="@+id/bottom_wrapper"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delete"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/material_deep_orange_A700"
            android:text="Delete"
            android:textColor="@color/white"
            android:textAllCaps="false"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/linearlayout"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:weightSum="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/po_no"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>

            <TextView
                android:id="@+id/po_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="001"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parts_no"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/part_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="001"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:weightSum="2"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/po_qty"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>

            <TextView
                android:id="@+id/po_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receive_qty"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
            <TextView
                android:id="@+id/receive_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="88"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_weight="0.5"
                android:textColor="@color/primary_text"/>
        </LinearLayout>

    </LinearLayout>

</com.daimajia.swipe.SwipeLayout>
