<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_box">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true"
        android:scrollbarDefaultDelayBeforeFade="3000"
        android:scrollbarFadeDuration="2000"
        android:scrollbars="none"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="3dp"
        android:layout_weight="1"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/material_blue_800_new"
        >

        <TextView
            android:id="@+id/txt_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:text="@string/add_freight"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_gravity="center"/>

            </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:visibility="visible"

      >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:weightSum="1"
          android:visibility="visible"
          android:layout_margin="5dp"
          android:id="@+id/branch_layout"
          android:gravity="center"
          android:layout_gravity="center">
      <TextView
          android:id="@+id/txt_br"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/branch"
          android:layout_weight="0.1"
          android:textColor="@color/primary_text"
          android:textSize="14dp"
          android:textStyle="bold"/>

      <TextView
          android:id="@+id/branch_no"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="#123"
          android:layout_weight="0.9"
          android:padding="5dp"
          android:singleLine="true"
          android:textColor="@color/primary_text"
          android:textSize="14dp"
          android:textStyle="bold"/>
      </LinearLayout>


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:id="@+id/order_layout"
          android:weightSum="1"
          android:visibility="visible"
          android:layout_margin="5dp"
          android:gravity="center"
          android:layout_gravity="center">
          <TextView
              android:id="@+id/txt_ordered"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/po"
              android:textColor="@color/primary_text"
              android:layout_weight="0.15"
              android:textSize="14dp"
              android:textStyle="bold"/>

          <TextView
              android:id="@+id/order_no"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="#222"
              android:layout_weight="0.85"
              android:padding="5dp"
              android:singleLine="true"
              android:textColor="@color/primary_text"
              android:textSize="14dp"
              android:textStyle="bold"/>
      </LinearLayout>

      <View
          android:layout_width="match_parent"
          android:id="@+id/view"
          android:layout_height="1.5dp"
          android:background="@color/material_blue_800"

          ></View>

            <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_margin="5dp"
          android:paddingBottom="5dp"
          android:paddingTop="5dp" >

          <com.ebs.ecount.uidesigns.fonts.RobotoTextView
              android:id="@+id/dialog_social_username"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:text="@string/inbound"
              android:textStyle="bold"
              android:textAllCaps="false"
              android:textColor="@color/primary_text"
              android:textSize="14sp"
              app:typeface="robotoLight" />

          <EditText
              android:id="@+id/inboundval"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textColor="@color/primary_text"
              android:theme="@style/MyEditText"
              android:textColorHint="@color/primary_text"
              android:hint=""
              android:inputType="numberDecimal"
              android:singleLine="true"
              android:maxLength="7"
              android:textAllCaps="false"
              android:textSize="14sp" />


          <com.ebs.ecount.uidesigns.fonts.RobotoTextView
              android:id="@+id/dialog_social_password"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:layout_marginTop="16dp"
              android:maxLines="4"
              android:textStyle="bold"
              android:textAllCaps="false"
              android:text="@string/outbound"
              android:textColor="@color/primary_text"
              android:textSize="14sp"
              app:typeface="robotoLight" />

          <EditText
              android:id="@+id/outboundval"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:textAllCaps="false"
              android:hint=""
              android:singleLine="true"
              android:maxLength="7"
              android:inputType="numberDecimal"
              android:textColor="@color/primary_text"
              android:theme="@style/MyEditText"
              android:textColorHint="@color/primary_text"
              android:textSize="14sp" />

      </LinearLayout>
  </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/material_blue_800"

            ></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="0.5">


        <com.ebs.ecount.uidesigns.fonts.RobotoTextView

            android:id="@+id/freight_dialog_social_ok"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/selector_dialog_warning"
            android:gravity="center"
            android:minWidth="64dp"
            android:padding="8dp"
            android:text="@string/ok"
            android:textColor="@color/primary_text"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="14dp"
            app:typeface="robotoMedium" />


        </LinearLayout>
            <View
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:background="@color/material_blue_800"

                ></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="0.5">

        <com.ebs.ecount.uidesigns.fonts.RobotoTextView
            android:id="@+id/freight_dialog_social_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/selector_dialog_warning"
            android:gravity="center"
            android:minWidth="64dp"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/primary_text"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="14dp"
            app:typeface="robotoMedium" />
    </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>